# evals-researcher

./: .gitignore  README.md  annotation.py  main.py  pyproject.toml  run_queries.py
annotation_tool/: app.py
fact_eval/: deduplicate.py  extract.py  pipeline.py  scrape.py  validate.py
notebooks/: 01_synthetic_dataset_generator.ipynb  02_error_analysis.ipynb  03_final_answer_error_analysis.ipynb  04_load_traces.ipynb  07_align_llm_as_judge.ipynb  dataset.json
presentation/: evals-presentation.html  evals-presentation.ipynb
