[project]
name = "evals-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=11.17.0",
    "bertopic>=0.17.3",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "langchain-gigachat>=0.3.12",
    "marimo>=0.14.15",
    "rich>=14.1.0",
]
